--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-paypal-button-v2": "^2.6.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.2"
+    "react-scripts": "3.4.2",
+    "read-more-react": "^1.0.10"
   },
   "scripts": {
     "start": "react-scripts start",
